Ajustes nas exceptions